--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   
   http: ^1.2.0
   shared_preferences: ^2.2.2
+  intl: ^0.18.1 
 
 
   # The following adds the Cupertino Icons font to your application.
